-*- mode: outline -*-

* Changes since version 0.42

** new features

Added support for PKCS7, ANSI X.923 and ISO 7816-4 padding schemes when
encrypting or decrypting in ECB or CBC mode.

Added support for CFB, CFB8 and OFB modes to cipher streams.

* Version 0.42, released 2018-08-09

** bug fixes

Fixed loading with SBCL versions newer than 1.4.10

Fixed wrong decryption when using the decrypt-in-place function with a block
cipher in CFB mode.

** new features

The encrypt-message and decrypt-message methods can be used with ciphers (in
addition to public or private keys).

Some optimizations for ed25519 and ed448.

* Version 0.41, released 2018-07-30

** new features

Added the original Keccak digests (SHA3 with a different padding).

Added the Streebog digests (GOST R 34.11-2012).

Added the Kuznyechik block cipher (GOST R 34.12-2015).

* Version 0.40, released 2018-06-20

** new features

Add ability to get or set the current position in the key stream for block
ciphers in CTR mode and stream cipher of the Chacha and Salsa20 families.

* Version 0.39, released 2018-04-19

** bug fixes

Fixed Poly1305 returning a bad MAC when calling produce-mac several times.

Fixed tree-hash returning a bad hash when calling produce-digest several times.

* Version 0.38, released 2018-02-20

** bug fixes

Fixed possible floating point exception when using strong-random with
a very large integer limit.

Fixed possible array type issue when compiling +ED448-DOM+.

Fixed bug where read-sequence was returning an invalid value for
encrypting-input-stream and decrypting-input-stream.

** new features

Optimized the Poly1305 MAC.

Add a COMPATIBLE-WITH-KEY keyword to GENERATE-KEY-PAIR for Elgamal
keys, to generate compatible Elgamal key pairs for a Diffie-Hellman
exchange more easily.

* Version 0.37, released 2017-11-23

Renamed NULL cipher to XOR. It's a better description of what it does,
and it allows not having to shadow cl:null.

** new features
