@@ -1,0 +1,26 @@
+(:mac-test #h"00000000000000000000000000000000" #h"" #h"58e2fccefa7e3061367f1d57a4e7455a" :aes #h"000000000000000000000000")
+(:mac-test #h"11754cd72aec309bf52f7687212e8957" #h"" #h"250327c674aaf477aef2675748cf6971" :aes #h"3c819d9a9bed087615030b65")
+(:mac-test #h"77be63708971c4e240d1cb79e8d77feb" #h"7a43ec1d9c0a5a78a0b16533a6213cab" #h"209fcc8d3675ed938e9c7166709dd946" :aes #h"e0e00f19fed7ba0136a797f3")
+(:mac-test #h"7680c5d3ca6154758e510f4d25b98820" #h"c94c410194c765e3dcc7964379758ed3" #h"94dca8edfcf90bb74b153c8d48a17930" :aes #h"f8f105f9c3df4965780321f8")
+(:mac-test #h"a82bb1edc7c01a3689006f34bfed783e" #h"9d115bb9bbd119fb777b6316065a9ac8" #h"c491889fa3eca4544ba0d51b8e0f3837" :aes #h"963836b67b188becf9ba1411")
+(:mac-test #h"b9782d0a5986c63f352d3bc4c7ecc96d" #h"f1a9f0723429c5b26185ac3ea7e13d7a" #h"74d0d36949f0276670f9ddc579e94f3a" :aes #h"4541e15b92edea44eceb1f2a")
+(:mac-test #h"59b95785b30f205679fc4f3f9a90102f" #h"39852d3182944a5177db277b63910702" #h"8f9a96c013992485b43e2b62745ad173" :aes #h"1908787cc1e1880a6ef5dd17")
+(:mac-test #h"34dd7926ab13d4078160d87de2e3c724" #h"af698717a6d790b3bfc39195857bb5ff" #h"48116050bbd9118270d0be252d29d5d4" :aes #h"c11ccdaf798ab03af2d97ef9")
+(:mac-test #h"8ec86fab55aaab0e77455e9cd3dbc78e" #h"e7509e276209a6d3ecfabb53ccdcd236" #h"d96d6ac0d309cebedeba2af9f262132f" :aes #h"15fd90a9867e14f0d63b53b9")
+(:mac-test #h"66b2473d9e0121666d47633f7008eb1c" #h"c20f686317d67e53dd79bae5c46dc111" #h"9a08616809cf15247dfeb9756ba4f609" :aes #h"c1716c68a24d57770b867e51")
+(:mac-test #h"5b262a9d00904d30a2587caade091381" #h"23112d078c9914fa3dfe5218cd191016" #h"98854d193a06dbe32ce4497eec5c9a8b" :aes #h"f7bc154ca562e8f2c1845598")
+(:mac-test #h"2e4fb9cc320188a6f1fa89a7a252273a" #h"80ba4a202a68c3590d6557912c6f878e" #h"9280313273befb8afa0bceca5a966d85" :aes #h"7a6d4ee69c7256c14fba8f5e")
+(:mac-test #h"2fb45e5b8f993a2bfebc4b15b533e0b4" #h"e85491b2202caf1d7dce03b97e09331c32473941" #h"c75b7832b2a2d9bd827412b6ef5769db" :aes #h"5b05755f984d2b90f94b8027")
+(:mac-test #h"952117048f77e276c2ef6580537c1403" #h"34b088f982818b5f07dabe2b62f9547f4ed09912" #h"bedd4cf30fd7a4abc49bdcc3f3b248b1" :aes #h"070b8fb46a7ad52885be1b26")
+(:mac-test #h"7f6453b39bde018560a16a2704217543" #h"11e4ecb256ebff56453fa2e75e43eb9d641049e6" #h"b512623a12d5492b7d76d39be0df5777" :aes #h"0f3eecf48d68353226a77fe4")
+(:mac-test #h"99e3e8793e686e571d8285c564f75e2b" #h"b668e42d4e444ca8b23cfdd95a9fedd5178aa521144890b093733cf5cf22526c5917ee476541809ac6867a8c399309fc" #h"3f4fba100eaf1f34b0baadaae9995d85" :aes #h"c2dd0ab868da6aa8ad9c0d23")
+(:mac-test #h"f8e29efd00a423c4ea9456863f83c54f" #h"02c70fc8a2544619c1c3e9fce6b3c6c3bc24643e0f140e6b48ac505ea666cd9a2010c3a8e2f5f10437887fe803b54db3" #h"963cb50aca3e09dd0d9a013c8734155f" :aes #h"2d3cf67cbce69d639bd1c092")
+(:mac-test #h"00e3491dfcf3bec39c89ccfd80a5a896" #h"73813351b39f5e4000a9ee8d2b85f131634acaede0dd25d691a2b829ad4fe9ea699f12242519847cb083b0b4d3d8b3bc" #h"01b2e9ba719ad77c753b364ecc5aabeb" :aes #h"29f6ff4edc4ac3e97ffb1680")
+(:mac-test #h"20b5b6b854e187b058a84d57bc1538b6" #h"ca418e71dbf810038174eaa3719b3fcb80531c7110ad9192d105eeaafa15b819ac005668752b344ed1b22faf77048baf03dbddb3b47d6b00e95c4f005e0cc9b7627ccafd3f21b3312aa8d91d3fa0893fe5bff7d44ca46f23afe0" #h"b37286ebaf4a54e0ffc2a1deafc9f6db" :aes #h"94c1935afc061cbf254b936f")
+(:mac-test #h"7aa53188a9c597126a10d248603ebb62" #h"417fd5147d56de0c74329597824ec2788a344fb60b403edf0187afa12e72a05009bb70f83ccad11efa487c1965cf84feac067c1ffdbf531fca97c554f875c4a1a1d3ab3c53c8a74ef3ee9415a87e231699c82d764debeda18132" #h"997bf84654bb9616c0cc9b45f82c7673" :aes #h"aa45ca5dac41a825c45d36bf")
+(:mac-test #h"72b5848ed1d2badbd427e16fc3b3e44d" #h"1c0dfcecbd7bb0e680ce042d08b2d9a741267bd1da768df2ba08379233a9973f14928e9da6353768b9b2601c033fd964b16a16daaa3ea35ad7cef7e31eb1f7340aa34e8bfc08b0a6e6205292570ced43316876d0d499d9192e6b" #h"270cd786b95e6820cdb65a231b7530ed" :aes #h"a84c7e928dc6e6379a513a20")
+(:mac-test #h"b52c505a37d78eda5dd34f20c22540ea1b58963cf8e5bf8ffa85f9f2492505b4" #h"" #h"bdc1ac884d332457a1d2664f168c76f0" :aes #h"516c33929df5a3284ff463d7")
+(:mac-test #h"78dc4e0aaf52d935c3c01eea57428f00ca1fd475f5da86a49c8dd73d68c8e223" #h"b96baa8c1c75a671bfb2d08d06be5f36" #h"3e5d486aa2e30b22e040b85723a06e76" :aes #h"d79cf22d504cc793c3fb6c8a")
+(:mac-test #h"886cff5f3e6b8d0e1ad0a38fcdb26de97e8acbe79f6bed66959a598fa5047d65" #h"519fee519d25c7a304d6c6aa1897ee1eb8c59655" #h"f6d47505ec96c98a42dc3ae719877b87" :aes #h"3a8efa1cd74bbab5448f9945")
+(:mac-test #h"f4069bb739d07d0cafdcbc609ca01597f985c43db63bbaaa0debbb04d384e49c" #h"3e1449c4837f0892f9d55127c75c4b25d69be334baf5f19394d2d8bb460cbf2120e14736d0f634aa792feca20e455f11" #h"805ec2931c2181e5bfb74fa0a975f0cf" :aes #h"d25ff30fdc3d464fe173e805")
+(:mac-test #h"03ccb7dbc7b8425465c2c3fc39ed0593929ffd02a45ff583bd89b79c6f646fe9" #h"98e68c10bf4b5ae62d434928fc6405147c6301417303ef3a703dcfd2c0c339a4d0a89bd29fe61fecf1066ab06d7a5c31a48ffbfed22f749b17e9bd0dc1c6f8fbd6fd4587184db964d5456132106d782338c3f117ec05229b0899" #h"cf54e7141349b66f248154427810c87a" :aes #h"fd119985533bd5520b301d12")
